{
  "version": 4,
  "terraform_version": "0.12.19",
  "serial": 302,
  "lineage": "4ae88b66-38b2-09d2-4fad-9e3a459cc132",
  "resources": [
    {
      "module": "module.subnets",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:000654207548:vpc/vpc-06902ce8bcc08807c",
            "cidr_block": "172.16.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-03ff91e5aaa63cd5d",
                "cidr_block": "172.16.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-c12ffba8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-06902ce8bcc08807c",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-0caf33d2d14ad4b46",
            "ipv6_cidr_block": "2600:1f16:350:1d00::/56",
            "main_route_table_id": "rtb-0369e2719025375a5",
            "owner_id": "000654207548",
            "state": "available",
            "tags": {
              "Attributes": "cluster",
              "Name": "sagemaker-kubeflow-test-eks-kfsgm-cluster-cluster",
              "Namespace": "sagemaker-kubeflow",
              "Stage": "test",
              "kubernetes.io/cluster/sagemaker-kubeflow-test-eks-kfsgm-cluster-cluster": "shared"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "default",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:000654207548:security-group/sg-0144b096ca9b2da2f",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0144b096ca9b2da2f",
            "ingress": [],
            "name": "default",
            "owner_id": "000654207548",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Default Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-06902ce8bcc08807c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_eip",
      "name": "default",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_instance",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_instance",
      "name": "nat_instance",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0f2f95227a8964888",
            "owner_id": "000654207548",
            "tags": {
              "Attributes": "cluster",
              "Name": "sagemaker-kubeflow-test-eks-kfsgm-cluster-cluster",
              "Namespace": "sagemaker-kubeflow",
              "Stage": "test",
              "kubernetes.io/cluster/sagemaker-kubeflow-test-eks-kfsgm-cluster-cluster": "shared"
            },
            "vpc_id": "vpc-06902ce8bcc08807c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "default",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-052157e32188a60af",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "000654207548",
            "subnet_id": null,
            "subnet_ids": [
              "subnet-0060f84b700b70bd5",
              "subnet-05a724e4fddccf2f8"
            ],
            "tags": {
              "Attributes": "cluster",
              "Name": "sagemaker-kubeflow-test-eks-kfsgm-cluster-cluster",
              "Namespace": "sagemaker-kubeflow",
              "Stage": "test",
              "cpco.io/subnet/type": "private",
              "kubernetes.io/cluster/sagemaker-kubeflow-test-eks-kfsgm-cluster-cluster": "shared"
            },
            "vpc_id": "vpc-06902ce8bcc08807c"
          },
          "dependencies": [
            "module.subnets.aws_subnet.private",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0d0a6dbc5d4ba87d2",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "000654207548",
            "subnet_id": null,
            "subnet_ids": [
              "subnet-06c6372f2a054ab55",
              "subnet-0c1e5921a119a946b"
            ],
            "tags": {
              "Attributes": "cluster",
              "Name": "sagemaker-kubeflow-test-eks-kfsgm-cluster-cluster",
              "Namespace": "sagemaker-kubeflow",
              "Stage": "test",
              "cpco.io/subnet/type": "public",
              "kubernetes.io/cluster/sagemaker-kubeflow-test-eks-kfsgm-cluster-cluster": "shared"
            },
            "vpc_id": "vpc-06902ce8bcc08807c"
          },
          "dependencies": [
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route",
      "name": "default",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route",
      "name": "nat_instance",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f2f95227a8964888",
            "id": "r-rtb-09fe7074f5fafea621080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09fe7074f5fafea62",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.subnets.aws_route_table.public",
            "module.vpc.aws_internet_gateway.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-04040095260287d46",
            "owner_id": "000654207548",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Attributes": "cluster",
              "Name": "sagemaker-kubeflow-test-eks-kfsgm-cluster-private-us-east-2a",
              "Namespace": "sagemaker-kubeflow",
              "Stage": "test",
              "cpco.io/subnet/type": "private",
              "kubernetes.io/cluster/sagemaker-kubeflow-test-eks-kfsgm-cluster-cluster": "shared"
            },
            "vpc_id": "vpc-06902ce8bcc08807c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0fb85aacc55e394c5",
            "owner_id": "000654207548",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Attributes": "cluster",
              "Name": "sagemaker-kubeflow-test-eks-kfsgm-cluster-private-us-east-2b",
              "Namespace": "sagemaker-kubeflow",
              "Stage": "test",
              "cpco.io/subnet/type": "private",
              "kubernetes.io/cluster/sagemaker-kubeflow-test-eks-kfsgm-cluster-cluster": "shared"
            },
            "vpc_id": "vpc-06902ce8bcc08807c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-09fe7074f5fafea62",
            "owner_id": "000654207548",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Attributes": "cluster",
              "Name": "sagemaker-kubeflow-test-eks-kfsgm-cluster-cluster",
              "Namespace": "sagemaker-kubeflow",
              "Stage": "test",
              "cpco.io/subnet/type": "public",
              "kubernetes.io/cluster/sagemaker-kubeflow-test-eks-kfsgm-cluster-cluster": "shared"
            },
            "vpc_id": "vpc-06902ce8bcc08807c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e50e8680d38429ca",
            "route_table_id": "rtb-04040095260287d46",
            "subnet_id": "subnet-05a724e4fddccf2f8"
          },
          "dependencies": [
            "module.subnets.aws_route_table.private",
            "module.subnets.aws_subnet.private",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a612c98977590545",
            "route_table_id": "rtb-0fb85aacc55e394c5",
            "subnet_id": "subnet-0060f84b700b70bd5"
          },
          "dependencies": [
            "module.subnets.aws_route_table.private",
            "module.subnets.aws_subnet.private",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a0181b9eef4e96be",
            "route_table_id": "rtb-09fe7074f5fafea62",
            "subnet_id": "subnet-0c1e5921a119a946b"
          },
          "dependencies": [
            "module.subnets.aws_route_table.public",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d8c57cc38a71c7bb",
            "route_table_id": "rtb-09fe7074f5fafea62",
            "subnet_id": "subnet-06c6372f2a054ab55"
          },
          "dependencies": [
            "module.subnets.aws_route_table.public",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_default",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.eks_workers",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:000654207548:security-group/sg-0bde6fff8bfb6b701",
            "description": "Security Group for EKS worker nodes",
            "egress": [],
            "id": "sg-0bde6fff8bfb6b701",
            "ingress": [],
            "name": "sagemaker-kubeflow-test-eks-kfsgm-cluster-workers",
            "name_prefix": null,
            "owner_id": "000654207548",
            "revoke_rules_on_delete": false,
            "tags": {
              "Attributes": "workers",
              "Name": "sagemaker-kubeflow-test-eks-kfsgm-cluster-workers",
              "Namespace": "sagemaker-kubeflow",
              "Stage": "test",
              "kubernetes.io/cluster/sagemaker-kubeflow-test-eks-kfsgm-cluster-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-06902ce8bcc08807c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:000654207548:security-group/sg-06af2dc76d4236aae",
            "description": "Security Group for EKS cluster",
            "egress": [],
            "id": "sg-06af2dc76d4236aae",
            "ingress": [],
            "name": "eks-kfsgm-cluster",
            "name_prefix": null,
            "owner_id": "000654207548",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-06902ce8bcc08807c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nat_instance",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.eks_workers",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress traffic",
            "from_port": 0,
            "id": "sgrule-881400175",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0bde6fff8bfb6b701",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.eks_workers.aws_security_group.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress traffic",
            "from_port": 0,
            "id": "sgrule-3895887087",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-06af2dc76d4236aae",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.eks_cluster.aws_security_group.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.eks_workers",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_cidr_blocks",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.eks_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_cidr_blocks",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.eks_workers",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_cluster",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow worker kubelets and pods to receive communication from the cluster control plane",
            "from_port": 0,
            "id": "sgrule-3932116133",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0bde6fff8bfb6b701",
            "self": false,
            "source_security_group_id": "sg-06af2dc76d4236aae",
            "to_port": 65535,
            "type": "ingress"
          },
          "dependencies": [
            "module.eks_cluster.aws_security_group.default",
            "module.eks_workers.aws_security_group.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.eks_workers",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_security_groups",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.eks_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_security_groups",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.eks_workers",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_self",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow nodes to communicate with each other",
            "from_port": 0,
            "id": "sgrule-1170637802",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0bde6fff8bfb6b701",
            "self": false,
            "source_security_group_id": "sg-0bde6fff8bfb6b701",
            "to_port": 65535,
            "type": "ingress"
          },
          "dependencies": [
            "module.eks_workers.aws_security_group.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_workers",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow the cluster to receive communication from the worker nodes",
            "from_port": 0,
            "id": "sgrule-2659369101",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-06af2dc76d4236aae",
            "self": false,
            "source_security_group_id": "sg-0bde6fff8bfb6b701",
            "to_port": 65535,
            "type": "ingress"
          },
          "dependencies": [
            "module.eks_cluster.aws_security_group.default",
            "module.eks_workers.aws_security_group.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nat_instance_egress",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nat_instance_ingress",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:000654207548:subnet/subnet-05a724e4fddccf2f8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.16.0.0/19",
            "id": "subnet-05a724e4fddccf2f8",
            "map_public_ip_on_launch": false,
            "owner_id": "000654207548",
            "tags": {
              "Attributes": "cluster",
              "Name": "sagemaker-kubeflow-test-eks-kfsgm-cluster-private-us-east-2a",
              "Namespace": "sagemaker-kubeflow",
              "Stage": "test",
              "cpco.io/subnet/type": "private",
              "kubernetes.io/cluster/sagemaker-kubeflow-test-eks-kfsgm-cluster-cluster": "shared"
            },
            "vpc_id": "vpc-06902ce8bcc08807c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:000654207548:subnet/subnet-0060f84b700b70bd5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.16.32.0/19",
            "id": "subnet-0060f84b700b70bd5",
            "map_public_ip_on_launch": false,
            "owner_id": "000654207548",
            "tags": {
              "Attributes": "cluster",
              "Name": "sagemaker-kubeflow-test-eks-kfsgm-cluster-private-us-east-2b",
              "Namespace": "sagemaker-kubeflow",
              "Stage": "test",
              "cpco.io/subnet/type": "private",
              "kubernetes.io/cluster/sagemaker-kubeflow-test-eks-kfsgm-cluster-cluster": "shared"
            },
            "vpc_id": "vpc-06902ce8bcc08807c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:000654207548:subnet/subnet-0c1e5921a119a946b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.16.96.0/19",
            "id": "subnet-0c1e5921a119a946b",
            "map_public_ip_on_launch": true,
            "owner_id": "000654207548",
            "tags": {
              "Attributes": "cluster",
              "Name": "sagemaker-kubeflow-test-eks-kfsgm-cluster-public-us-east-2a",
              "Namespace": "sagemaker-kubeflow",
              "Stage": "test",
              "cpco.io/subnet/type": "public",
              "kubernetes.io/cluster/sagemaker-kubeflow-test-eks-kfsgm-cluster-cluster": "shared"
            },
            "vpc_id": "vpc-06902ce8bcc08807c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:000654207548:subnet/subnet-06c6372f2a054ab55",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.16.128.0/19",
            "id": "subnet-06c6372f2a054ab55",
            "map_public_ip_on_launch": true,
            "owner_id": "000654207548",
            "tags": {
              "Attributes": "cluster",
              "Name": "sagemaker-kubeflow-test-eks-kfsgm-cluster-public-us-east-2b",
              "Namespace": "sagemaker-kubeflow",
              "Stage": "test",
              "cpco.io/subnet/type": "public",
              "kubernetes.io/cluster/sagemaker-kubeflow-test-eks-kfsgm-cluster-cluster": "shared"
            },
            "vpc_id": "vpc-06902ce8bcc08807c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:000654207548:vpc/vpc-06902ce8bcc08807c",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0fe68e07faa97bb46",
            "default_route_table_id": "rtb-0369e2719025375a5",
            "default_security_group_id": "sg-0144b096ca9b2da2f",
            "dhcp_options_id": "dopt-c12ffba8",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-06902ce8bcc08807c",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-0caf33d2d14ad4b46",
            "ipv6_cidr_block": "2600:1f16:350:1d00::/56",
            "main_route_table_id": "rtb-0369e2719025375a5",
            "owner_id": "000654207548",
            "tags": {
              "Attributes": "cluster",
              "Name": "sagemaker-kubeflow-test-eks-kfsgm-cluster-cluster",
              "Namespace": "sagemaker-kubeflow",
              "Stage": "test",
              "kubernetes.io/cluster/sagemaker-kubeflow-test-eks-kfsgm-cluster-cluster": "shared"
            }
          }
        }
      ]
    }
  ]
}